# src/controllers/Default.ts
@@ -7,14 +7,15 @@ import * as NoteService from "../service/NoteService"
 import * as SharedNotesService from "../service/SharedNotesService"
 import { getAccountUuid } from "../utils/authentication";
 import { ServerResponse } from "http";
+import { NoteMetadata } from "../orm/models/NoteMetadata";
 
-export function createAccount(req: Request, res: ServerResponse, next: any, account: Partial<Account>) {
+export function createAccount(req: Request, res: ServerResponse, next: Function, account: Partial<Account>) {
 	AccountService.createAccount(account)
 		.then(newAccount => writeJson(res, newAccount.toJSON()))
 		.catch(message => writeMessage(res, message, 403));
 };
 
-export function createNewNote(req: Request, res: ServerResponse, next: any) {
+export function createNewNote(req: Request, res: ServerResponse, next: Function) {
 	const accountUuid = getAccountUuid(req, res)
 	if (accountUuid) {
 		NoteService.createNewNote(accountUuid)
@@ -23,7 +24,7 @@ export function createNewNote(req: Request, res: ServerResponse, next: any) {
 	}
 };
 
-export function deleteNoteById(req: Request, res: ServerResponse, next: any, noteUUID: string) {	
+export function deleteNoteById(req: Request, res: ServerResponse, next: Function, noteUUID: string) {	
 	const accountUuid = getAccountUuid(req, res)
 	if (accountUuid) {
 		NoteService.deleteNoteById(noteUUID, accountUuid)
@@ -32,7 +33,7 @@ export function deleteNoteById(req: Request, res: ServerResponse, next: any, not
 	}
 };
 
-export function getAllNoteMetadata(req: Request, res: ServerResponse, next: any) {
+export function getAllNoteMetadata(req: Request, res: ServerResponse, next: Function) {
 	const accountUuid = getAccountUuid(req, res)
 	if (accountUuid) {
 		NoteService.getAllNoteMetadata(accountUuid)
@@ -41,7 +42,7 @@ export function getAllNoteMetadata(req: Request, res: ServerResponse, next: any)
 	}
 };
 
-module.exports.getAllSharedNoteMetadata = function getAllSharedNoteMetadata(req: Request, res: ServerResponse, next: any) {
+module.exports.getAllSharedNoteMetadata = function getAllSharedNoteMetadata(req: Request, res: ServerResponse, next: Function) {
 	SharedNotesService.getAllSharedNoteMetadata()
 		.then(function (response: any) {
 			writeJson(res, response);
@@ -51,7 +52,7 @@ module.exports.getAllSharedNoteMetadata = function getAllSharedNoteMetadata(req:
 		});
 };
 
-export function getNoteContentById(req: Request, res: ServerResponse, next: any, noteUUID: any) {
+export function getNoteContentById(req: Request, res: ServerResponse, next: Function, noteUUID: string) {
 	const accountUuid = getAccountUuid(req, res)
 	if (accountUuid) {
 		NoteService.getNoteContentById(noteUUID, accountUuid)
@@ -60,7 +61,7 @@ export function getNoteContentById(req: Request, res: ServerResponse, next: any,
 	}
 };
 
-export function getNoteMetadataById(req: Request, res: ServerResponse, next: any, noteUUID: any) {
+export function getNoteMetadataById(req: Request, res: ServerResponse, next: Function, noteUUID: string) {
 	const accountUuid = getAccountUuid(req, res)
 	if (accountUuid) {
 		NoteService.getNoteMetadataById(noteUUID, accountUuid)
@@ -69,7 +70,7 @@ export function getNoteMetadataById(req: Request, res: ServerResponse, next: any
 	}
 };
 
-module.exports.getSharedNoteContentById = function getSharedNoteContentById(req: Request, res: ServerResponse, next: any, noteUUID: any) {
+module.exports.getSharedNoteContentById = function getSharedNoteContentById(req: Request, res: ServerResponse, next: Function, noteUUID: string) {
 	SharedNotesService.getSharedNoteContentById(noteUUID)
 		.then(function (response: any) {
 			writeJson(res, response);
@@ -79,7 +80,7 @@ module.exports.getSharedNoteContentById = function getSharedNoteContentById(req:
 		});
 };
 
-module.exports.getSharedNoteMetadataById = function getSharedNoteMetadataById(req: Request, res: ServerResponse, next: any, noteUUID: any) {
+module.exports.getSharedNoteMetadataById = function getSharedNoteMetadataById(req: Request, res: ServerResponse, next: Function, noteUUID: string) {
 	SharedNotesService.getSharedNoteMetadataById(noteUUID)
 		.then(function (response: any) {
 			writeJson(res, response);
@@ -89,26 +90,25 @@ module.exports.getSharedNoteMetadataById = function getSharedNoteMetadataById(re
 		});
 };
 
-export function updateNoteContentById(req: Request, res: ServerResponse, next: any, content: any, noteUUID: any) {
+export function updateNoteContentById(req: Request, res: ServerResponse, next: Function, body: string, noteUUID: string) {
 	const accountUuid = getAccountUuid(req, res)
 	if (accountUuid) {
-		NoteService.updateNoteContentById(noteUUID, accountUuid, content)
+		NoteService.updateNoteContentById(noteUUID, accountUuid, body)
 		.then(() => sendStatus(res, 200))
 		.catch(message => writeJson(res, message, 404));
 	}
 };
 
-module.exports.updateNoteMetadataById = function updateNoteMetadataById(req: Request, res: ServerResponse, next: any, body: any, noteUUID: any) {
-	NoteService.updateNoteMetadataById(body, noteUUID)
-		.then(function (response: any) {
-			writeJson(res, response);
-		})
-		.catch(function (response: any) {
-			writeJson(res, response);
-		});
+export function updateNoteMetadataById(req: Request, res: ServerResponse, next: Function, body: Partial<NoteMetadata>, noteUUID: string) {
+	const accountUuid = getAccountUuid(req, res)
+	if (accountUuid) {
+		NoteService.updateNoteMetadataById(body, noteUUID, accountUuid)
+		.then(newMeta => writeJson(res, newMeta))
+		.catch(message => writeJson(res, message, 400));
+	}
 };
 
-module.exports.updateSharedNoteContentById = function updateSharedNoteContentById(req: Request, res: ServerResponse, next: any, noteUUID: any) {
+module.exports.updateSharedNoteContentById = function updateSharedNoteContentById(req: Request, res: ServerResponse, next: Function, noteUUID: string) {
 	SharedNotesService.updateSharedNoteContentById(noteUUID)
 		.then(function (response: any) {
 			writeJson(res, response);
